--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <section id="sobre" class="tela">
         <h2>Sobre o Cherry Space</h2>
         <p>
-            Cherry Space é um app desenvolvido como projeto pessoal,
-            focado em simplicidade, carinho e organização 🍒❤️
+            Cherry Space é um app que eu desenvolvi para você meu amor!
+            Ele foi feito com muito amor e dedicação! 🍒❤️
         </p>
     </section>
 
